# AWS-RAG_Intelligence-System

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Notebook/: Azureopenai.ipynb
app/: config.py  main.py
app/models/: vector_store.py
app/services/: llm_service.py  storage_service.py
app/static/: style.css
app/templates/: index.html  plot.html
