[project]
name = "aws-rag-intelligence-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3==1.28.0",
    "chroma-hnswlib==0.7.1",
    "chromadb==0.4.0",
    "flask==2.3.3",
    "langchain==0.0.267",
    "openai==0.28.0",
    "pypdf==3.9.0",
    "python-dotenv==0.19.0",
    "tiktoken==0.5.1",
    "unstructured==0.10.30",
    "werkzeug==2.3.7",
]
